--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-loader": "^15.9.5",
         "vue-router": "^3.5.1",
         "vue-template-compiler": "^2.6.12",
+        "vuex": "^3.6.2",
         "webpack-cli": "^4.7.2"
     }
 }
