--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "vue-template-compiler": "^2.6.12",
         "vuex": "^3.6.2",
         "webpack-cli": "^4.7.2"
+    },
+    "dependencies": {
+        "dropzone": "^5.9.2"
     }
 }
